--- a/android-exoplayer/build.gradle
+++ b/android-exoplayer/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     }
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
